XWIKI-6557: Small UI layout issue in the "add tag" dialog Fixed.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/tags.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/viewers/tags.css
@@ -60,9 +60,8 @@ a.tag-delete, a.tag-delete:visited {
 }
 
 .tag-add-form .input-tag {
-  width: 16em;
-  height: 80%;
   margin: 0 3px .3em 0;
+  width: 16em;
 }
 
 .tag-add-form .buttonwrapper {
